2004-08-13  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc:  Re-word the filledcurves section according to
	suggestions from Petr Mikulik.

	* term/post.trm:  Rename new option once again: set term post {level1}
	(naming history: nolevel2 -> ai -> level1). Audit code to confirm that
	in fact it excutes only commands required by PostScript Level 1.

2004-08-12  Ethan Merritt  <merritt@u.washington.edu>

	* term/post.trm: Rename 'nolevel2' option to 'ai', since its primary
	use may be to generate output compatible with Adobe Illustrator.

2004-08-11  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (exec_cmd): Set line properties to CapRound, JoinRound
	while drawing plot symbols. This works around a very odd bug that
	causes the symbols to be drawn incorrectly for some X-server settings.
	Also modify plot symbol code so that the symbols are always drawn with
	a 1:1 aspect ratio (crosses always fit in a square) rather than 
	tracking the aspect ratio of the current plot window.

2004-08-10  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (parse_colorspec): Allow people to set the text color
	to background (tc lt -2) if they really want to.

2004-08-09  Ethan Merritt  <merritt@u.washington.edu>

	* src/command.c: Remove unused prototype.

	* src/getcolor.c: Conditionally remove unused prototype during 
	compilation of gnuplot_x11.

	* src/plot2d.c (eval_plots) src/plot3d.c (eval_3dplots)
	src/set.c (set_tic_prop): Continue replacement of isstring +
	m_quote_capture with try_to_get_string().

	* src/command.c (history_command): Code cleanup; convert to use
	try_to_get_string(). Code is still full of little memory leaks.

	* term/post.trm: Fix '%' characters in output format.
	
2004-08-08  Ethan Merritt  <merritt@u.washington.edu>

	* src/util.c src/util.h: New routine try_to_get_string() that combines 
	isstring() and m_quote_capture(). The intent is to switch call sites